# level2-3-recsys-finalproject-recsys-03

./: .gitignore  README.md  pyproject.toml
airflow/: airflow.cfg  airflow.db
airflow/dags/: crawling.py  data_preprocessing.py  dataloader.py  main.py  model.py  trainer.py
backend/: api.py  database.py  filter.py  in_memory.py  in_momory.py  main.py  make_playlist.py  oauth_client.py  pyproject.toml  requirements.txt  schemas.py
filter/: filter.py  pyproject.toml  tag.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/views/footer/: footer.js
frontend/src/components/views/loginPage/: config.js  login.css  spotify_login.js
frontend/src/components/views/navBar/: navBar.js
frontend/src/components/views/navBar/section/: nav.css  rightMenu.js
frontend/src/components/views/servicePage/: export.js  infoList.css  infoList.js  play.js  playlist.js  service.css  service.js
models/: content_based_model.py  filtering.py  graphsage_inference.py  inference.py  inference_cbf_model.py  inference_cf_model.py  inference_graphsage.py  inference_tag_model.py  main.py  make_data.py  pyproject.toml  tag_embedding.py  tag_model.py  tag_ranking.py  train_cbf_model.py  train_cf_model.py  train_graphsage.py  train_graphsage.sh  train_tag_model.py
models/EDA/: EDA_artist_genre_tag.py  load_data.ipynb  load_dataframe.ipynb  make_dataframe.ipynb
models/graphsage/: args.py  data_preprocessing.py  model.py  trainer.py  utils.py
models/graphsage_cbf/: args_cbf.py  args_tag.py  data_preprocessing.py  model.py  trainer.py
models/graphsage_cf/: args.py  data_preprocessing.py  model.py  trainer.py  utils.py
test/: accuracy.py  service_test.py
