[tool.poetry]
name = "music-recsys"
version = "0.1.0"
description = ""
authors = ["Kim_SuBeen <sbkim8519@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
itsdangerous = "^2.1.2"
pydantic-settings = "^2.2.1"
authlib = "^1.3.0"
httpx = "^0.27.0"
pymongo = "^4.6.2"
uvicorn = "^0.27.1"

scikit-learn = "^1.4.1.post1"
loguru = "^0.7.2"
langchain-openai = "^0.0.8"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pillow = "^10.2.0"
torchvision = "^0.15.0"
torch = "2.0.0"
torch-geometric = "^2.5.0"
pytorch-lightning = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
