[tool.poetry]
name = "filter"
version = "0.1.0"
description = "Filtering Tag"
authors = ["subeenkim <sbkim8519@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.10"
torch = "2.0.1"
openai = "^1.13.3"
langchain-community = "^0.0.25"
langchain-core = "^0.1.28"
langchain-experimental = "^0.0.53"
langserve = {extras = ["all"], version = "^0.0.46"}
langchain-cli = "^0.0.21"
langsmith = "^0.1.14"
langchain-openai = "^0.0.8"
python-dotenv = "1.0.0"
pandas = "2.1.3"

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
