# Poetry 가상 환경 설정 및 시작하기
# 1. 이 폴더에서 터미널을 열고 'poetry install'을 실행하여 의존성을 설치
# 2. 'poetry shell'을 실행하여 가상 환경을 활성화

[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["jjw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3.3"
matplotlib = "3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
